--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,27 @@ name = "poly_cls"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "main"
+path = "src/main.rs"
+
+[[bin]]
+name = "csv_demo"
+path = "src/bin/csv_demo.rs"
+
+[[bin]]
+name = "vec_demo"
+path = "src/bin/vec_demo.rs"
+
+[[bin]]
+name = "cls_demo"
+path = "src/bin/cls_demo.rs"
+
+
+
 [dependencies]
 serde = { version = "1.0.227", features = ["derive"] }
-tokio-postgres = { version = "0.7.14", features = ["with-chrono-0_4"] }
+tokio-postgres = { version = "0.7.14", features = ["with-chrono-0_4", "array-impls"] }
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
 tracing-subscriber = "0.3.20"
@@ -14,3 +32,9 @@ csv = "1.3.1"
 tokio = { version = "1.47.1", features = ["full"] }
 chrono = { version = "0.4.39", features = ["serde"] }
 config = "0.15.6"
+serde_json = "1.0.145"
+sqlx = "0.8.6"
+rig-core = {git = "https://github.com/RVdeported/rig.git"}
+# rig-postgres = "0.1.20"
+postgres-types = "0.2.10"
+futures = "0.3.31"
