--- a/configs/test.ini
+++ b/configs/test.ini
@@ -10,11 +10,19 @@ user = postgres
 psswd= postgres
 
 # protocols: ollama, openai, deepseek, anthropic
+
+
 [llm_1]
 host 		= https://api.deepseek.com/anthropic
 protocol	= anthropic
-api_key 	= 
+api_key 	= sk-6d5db8f65f4f40439644c99287104cf3
 model_name	= deepseek-chat
+
+[llm_3]
+host 		= http://localhost:8001
+protocol	= ollama
+api_key 	= sk
+model_name	= qwen3:8b
 
 [llm_2]
 host 		= http://localhost:8002/v1
