--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,14 @@ path = "src/bin/vec_demo.rs"
 name = "cls_demo"
 path = "src/bin/cls_demo.rs"
 
+[[bin]]
+name = "insert"
+path = "src/bin/insert.rs"
+
+[[bin]]
+name = "export"
+path = "src/bin/export.rs"
+
 
 
 [dependencies]
@@ -40,3 +48,7 @@ postgres-types = "0.2.10"
 futures = "0.3.31"
 enum-iterator = "2.3.0"
 futures-batch = "0.7.0"
+strum_macros = "0.27.2"
+strum = "0.27.2"
+clap = { version = "4.5.48", features = ["derive"] }
+env = "1.0.1"
